cabal-version:      2.4
name:               guestbook
version:            0.1.0.0
author:             Agustin Mista
maintainer:         agustin@mista.me

executable guestbook
  main-is:
    Main.hs
  build-depends:
    base ^>=4.15.1.0,
    aeson,
    text,
    scotty,
    http-types,
    wai-middleware-static,
    wai-extra
  hs-source-dirs:
    src
  default-language:
    Haskell2010
